k8s/namespaces/security/tinyauth/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tinyauth
  namespace: security
  labels:
    app.kubernetes.io/name: tinyauth
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - "auth.hosted.fail"
  rules:
    - backendRefs:
        - name: tinyauth
          port: 3000
